# chatbot

./: .gitignore  api.py  connect_memory_with_llm.py  output_train.txt  pyproject.toml  recommender.ipynb  requirements.txt  skills.index  skills_dataset.csv  skills_with_embeddings.pkl  train_model.py  vercel.json
fine_tuned_sbert/: README.md  config_sentence_transformers.json
